force-app/main/default/objects/synety__Synety_Configuration__c/synety__Synety_Configuration__c.object-meta.xml
<CustomObject>
    <label>CloudCall Configuration</label>
    <nameField>
        <label>Owner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CloudCall Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>