force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__Available_Devices__c.field-meta.xml
<CustomField>
    <fullName>synety__Available_Devices__c</fullName>
    <label>Available Devices</label>
    <type>TextArea</type>
</CustomField>