force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__CDR_Push_Profile__c.field-meta.xml
<CustomField>
    <fullName>synety__CDR_Push_Profile__c</fullName>
    <label>CDR Push Profile</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>