force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__Customer_Login_Email__c.field-meta.xml
<CustomField>
    <fullName>synety__Customer_Login_Email__c</fullName>
    <label>Admin Login Email</label>
    <type>Email</type>
</CustomField>