force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__Customer_Login_Password__c.field-meta.xml
<CustomField>
    <fullName>synety__Customer_Login_Password__c</fullName>
    <label>Customer Login Password</label>
    <length>175</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>