force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__Enable_Outbound_Identity__c.field-meta.xml
<CustomField>
    <fullName>synety__Enable_Outbound_Identity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Outbound Identity</label>
    <type>Checkbox</type>
</CustomField>