force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__JwtToken__c.field-meta.xml
<CustomField>
    <fullName>synety__JwtToken__c</fullName>
    <label>Jwt Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>