force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__Last_Used_Device_Number__c.field-meta.xml
<CustomField>
    <fullName>synety__Last_Used_Device_Number__c</fullName>
    <label>Last Used Device Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>