force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__LicenseKey__c.field-meta.xml
<CustomField>
    <fullName>synety__LicenseKey__c</fullName>
    <label>LicenseKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>