force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__OAuthExpiration__c.field-meta.xml
<CustomField>
    <fullName>synety__OAuthExpiration__c</fullName>
    <label>OAuth Token Expiration</label>
    <type>DateTime</type>
</CustomField>