force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__OAuthKey__c.field-meta.xml
<CustomField>
    <fullName>synety__OAuthKey__c</fullName>
    <label>OAuth Consumer Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>