force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__OAuthToken__c.field-meta.xml
<CustomField>
    <fullName>synety__OAuthToken__c</fullName>
    <label>OAuth Token</label>
    <length>100</length>
    <type>Text</type>
</CustomField>