force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__OAuthTokenSecret__c.field-meta.xml
<CustomField>
    <fullName>synety__OAuthTokenSecret__c</fullName>
    <label>OAuth Token Secret</label>
    <length>100</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>