force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__Password__c.field-meta.xml
<CustomField>
    <fullName>synety__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>