force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__PrePopulation_User_Group__c.field-meta.xml
<CustomField>
    <fullName>synety__PrePopulation_User_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CloudCall PrePopulation User Group</label>
    <referenceTo>synety__PrePopulation_User_Group__c</referenceTo>
    <relationshipLabel>CloudCall Configurations</relationshipLabel>
    <relationshipName>Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>