force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>synety__Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Users with only Standard profile(s) are allowed.</errorMessage>
        <filterItems>
            <field>User.Profile.UserType</field>
            <operation>equals</operation>
            <value>Standard</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Synety_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>