force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__Use_CRM_Sync_Notes__c.field-meta.xml
<CustomField>
    <fullName>synety__Use_CRM_Sync_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use CRM Sync Call Notes Validation</label>
    <type>Checkbox</type>
</CustomField>