force-app/main/default/objects/synety__Synety_Configuration__c/fields/synety__UserName__c.field-meta.xml
<CustomField>
    <fullName>synety__UserName__c</fullName>
    <label>UserName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>