force-app/main/default/objects/synety__Synety_Configuration__c/listViews/synety__All.listView-meta.xml
<ListView>
    <fullName>synety__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>synety__UserName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>